added several profiles to be able to pack spring boot app as bith jar and war

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+server.servlet.context-path=/api
+
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.open-in-view=false
+spring.profiles.active=dev
 
 app.security.otp.sender=turbosms
 app.security.otp.sender.api.key=${OTP_SENDER_API_KEY}
