--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
   <name>vladex-web-api</name>
   <description>Vladex WEB API</description>
 
+  <packaging>${project.packaging}</packaging>
+
   <properties>
     <java.version>8</java.version>
   </properties>
@@ -113,5 +115,43 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>dev</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <project.packaging>jar</project.packaging>
+      </properties>
+    </profile>
+
+
+    <profile>
+      <id>release</id>
+      <properties>
+        <project.packaging>war</project.packaging>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-web</artifactId>
+          <exclusions>
+            <exclusion>
+              <artifactId>spring-boot-starter-tomcat</artifactId>
+              <groupId>org.springframework.boot</groupId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+        <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>4.0.1</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 
 </project>
