updated qa profiles urls, updated mock data

--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -9,4 +9,4 @@ app.security.jwt.keystore-location=keys/keystore.jks
 app.security.jwt.keystore-password=password
 app.security.jwt.key-alias=jwtsigning
 app.security.jwt.private-key-passphrase=password
-app.security.cors.allowed.origins=http://178.165.0.142, http://vladex-messenger.com
+app.security.cors.allowed.origins=http://178.165.0.142:8081, http://vladex-messenger.com:8081
