--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -1,9 +1,13 @@
 server.port=8585
 
-spring.datasource.username=root
+spring.datasource.url=jdbc:h2:tcp://localhost:9092/mem:vladex_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.url=jdbc:mysql://localhost:3311/vladex_db?verifyServerCertificate=false&useSSL=false&allowPublicKeyRetrieval=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
 
 app.security.jwt.keystore-location=keys/keystore.jks
 app.security.jwt.keystore-password=password
