--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,15 +2,25 @@ server.port=8585
 
 spring.datasource.url=jdbc:h2:tcp://localhost:9092/mem:vladex_db
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=${VLADEX_DB_USERNAME}
+spring.datasource.password=${VLADEX_DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
 
-app.security.jwt.keystore-location=keys/keystore.jks
-app.security.jwt.keystore-password=password
-app.security.jwt.key-alias=jwtsigning
-app.security.jwt.private-key-passphrase=password
+app.security.jwt.keystore-location=keys/dev/keystore.jks
+app.security.jwt.keystore-password=${VLADEX_JWT_KEY_STORE_PASSWORD}
+app.security.jwt.key-alias=${VLADEX_JWT_KEY_ALIAS}
+app.security.jwt.private-key-passphrase=${VLADEX_JWT_KEY_PASSPHRASE}
 app.security.cors.allowed.origins=http://localhost:8080
+
+server.ssl.enabled=true
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keys/dev/vladex-ssl.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=${VLADEX_SSL_KEY_STORE_PASSWORD}
+# The alias mapped to the certificate
+server.ssl.key-alias=${VLADEX_SSL_KEY_ALIAS}
