updated cors config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,7 +13,7 @@ app.security.jwt.keystore-location=keys/dev/keystore.jks
 app.security.jwt.keystore-password=${VLADEX_JWT_KEY_STORE_PASSWORD}
 app.security.jwt.key-alias=${VLADEX_JWT_KEY_ALIAS}
 app.security.jwt.private-key-passphrase=${VLADEX_JWT_KEY_PASSPHRASE}
-app.security.cors.allowed.origins=http://localhost:8080
+app.security.cors.allowed.origins=http://localhost:8080,http://localhost:8081
 
 server.ssl.enabled=false
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
