added sll for qa, updated links to https for qa

--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -13,9 +13,9 @@ app.security.jwt.keystore-location=keys/qa/keystore.jks
 app.security.jwt.keystore-password=${VLADEX_JWT_KEY_STORE_PASSWORD}
 app.security.jwt.key-alias=${VLADEX_JWT_KEY_ALIAS}
 app.security.jwt.private-key-passphrase=${VLADEX_JWT_KEY_PASSPHRASE}
-app.security.cors.allowed.origins=http://178.165.0.142:8081, http://vladex-messenger.com:8081
+app.security.cors.allowed.origins=https://178.165.0.142:8081
 
-server.ssl.enabled=false
+server.ssl.enabled=true
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
